tests/suites/scctests/cc/error/0015-macro.c
/*
PATTERN:
0015-macro.c:7: error: duplicated macro parameter 'A'
.
*/

#define X(A, A) 0

